martian-derive/tests/ui_martian_struct/test_missing_martian_type.stderr
error[E0277]: the trait bound `Foo: MartianFileType` is not satisfied
 --> tests/ui_martian_struct/test_missing_martian_type.rs:8:10
  |
8 |     foo: Foo, // Does not implement AsMartianPrimaryType
  |          ^^^ the trait `MartianFileType` is not implemented for `Foo`
  |
  = help: the following other types implement trait `AsMartianBlanketType`:
            HashMap<K, V, H>
            HashSet<K, H>
            Vec<T>
            Option<T>
  = note: required for `Foo` to implement `AsMartianPrimaryType`
  = note: required for `Foo` to implement `AsMartianBlanketType`
